--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -20,6 +20,6 @@ development_status:
 
   # Epic 2: DVP Core Engine & Wizard
   "2-1-modele-donnees-dvp": "done"
-  "2-2-tunnel-saisie": "review"
+  "2-2-tunnel-saisie": "done"
   "2-3-saisie-projet-ville": "ready-for-dev"
   "2-4-saisie-budget": "ready-for-dev"
