feature 2.4: Saisie Pilier 2 - Budget & Garants

--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -22,4 +22,4 @@ development_status:
   "2-1-modele-donnees-dvp": "done"
   "2-2-tunnel-saisie": "done"
   "2-3-saisie-projet-ville": "done"
-  "2-4-saisie-budget": "ready-for-dev"
+  "2-4-saisie-budget": "done"
