--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -23,3 +23,6 @@ development_status:
   "2-2-tunnel-saisie": "done"
   "2-3-saisie-projet-ville": "done"
   "2-4-saisie-budget": "done"
+  "2-5-saisie-logement": "done"
+  "2-6-saisie-langue": "done"
+  "2-7-synthese-dvp": "done"
