Cockpit Refinement (White-box, History, Auth)

--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -39,3 +39,4 @@ development_status:
   "4-3-justifications-insight-cards": "review"
   "4-4-simulator-what-if": "review"
   "4-5-cockpit-feedback-fixes": "done"
+  "4-6-cockpit-refinement-whitebox-history": "done"
