--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -41,6 +41,7 @@ development_status:
   "4-5-cockpit-feedback-fixes": "done"
   "4-7-hotfix-ux-consistency": "done"
   "4-8-stabilisation-ux-data": "done"
+  "4-9-cockpit-synthesis-history-refinement": "done"
 
   # Epic 5: Standard of Truth Admin
   "5-0-admin-business-rules": "done"
