--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -43,6 +43,7 @@ development_status:
   "4-8-stabilisation-ux-data": "done"
   "4-9-cockpit-synthesis-history-refinement": "done"
   "4-10-stabilisation-data-timezone": "done"
+  "4-11-dvp-administrative-model": "in-progress"
 
   # Epic 5: Standard of Truth Admin
   "5-0-admin-business-rules": "done"
