--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.12",
+    "@ai-sdk/react": "^3.0.44",
     "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.6.0",
