--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -53,7 +53,7 @@ development_status:
 
   # Epic 7: Socle Conversationnel & Miroir Lucide (NEW)
   "7-1-initialisation-chat": "done"
-  "7-2-miroir-lucide": "ready-for-dev"
+  "7-2-miroir-lucide": "done"
   "7-3-indice-clarte": "ready-for-dev"
   "7-4-jauge-viabilite": "ready-for-dev"
 
