--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^3.0.13",
     "@ai-sdk/openai": "^3.0.12",
     "@ai-sdk/react": "^3.0.44",
     "@auth/prisma-adapter": "^2.7.2",
