--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -54,8 +54,8 @@ development_status:
   # Epic 7: Socle Conversationnel & Miroir Lucide (NEW)
   "7-1-initialisation-chat": "done"
   "7-2-miroir-lucide": "done"
-  "7-3-indice-clarte": "ready-for-dev"
-  "7-4-jauge-viabilite": "ready-for-dev"
+  "7-3-indice-clarte": "review"
+  "7-4-jauge-viabilite": "review"
 
   # Epic 8: Finalisation & Sortie de Session (NEW)
   "8-1-dvp-b-generation": "ready-for-dev"
