--- a/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
+++ b/BMAD_OUTPUT/implementation-artifacts/sprint-status.yaml
@@ -58,8 +58,8 @@ development_status:
   "7-4-jauge-viabilite": "done"
 
   # Epic 8: Finalisation & Sortie de Session (NEW)
-  "8-1-dvp-b-generation": "review"
-  "8-2-persistance-session": "review"
+  "8-1-dvp-b-generation": "done"
+  "8-2-persistance-session": "done"
 
   # Epic 9: Exécution Assistée & Focus Mode (NEW)
   "9-1-focus-engine": "ready-for-dev"
