--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
@@ -54,6 +55,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
     "resize-observer-polyfill": "^1.5.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
